--- a/projects.html
+++ b/projects.html
@@ -188,13 +188,13 @@
 
                     <div class="s-cta__content">
                         <h2 class="text-display-title">
-                        Get started with a consultation today.
+                        Feel free to hit me up.
                         </h2>
                         <p class="lead">
                        
-                         Feel free to hit me up.
+                         
                         </p>
-                        <a href="contact.html" class="btn btn--primary">CLICK HERE TO CONTACT ME</a>
+                        <a href="contact.html" class="btn btn--primary">Visit my socials</a>
                     </div>
 
                 </div>
