--- a/index.html
+++ b/index.html
@@ -325,27 +325,27 @@
                     
                         <div class="clients-list">                            
                             <div class="clients-list__item">
-                                <a href="https://www.unrealengine.com/en-US">
+                                <a href="https://www.unrealengine.com/en-US"  target="_blank">
                                     <img src="images/unreal-engine.jpg" alt="Unreal Engine">
                                 </a>
                             </div>
                             <div class="clients-list__item">
-                                <a href="https://developer.apple.com/ios/planning/">
+                                <a href="https://developer.apple.com/ios/planning/"  target="_blank">
                                     <img src="images/apple-developer-og.png" alt="Apple Developer">
                                 </a>
                             </div>
                             <div class="clients-list__item">
-                                <a href="https://www.blackmagicdesign.com/products/davinciresolve">
+                                <a href="https://www.blackmagicdesign.com/products/davinciresolve"  target="_blank">
                                     <img src="images/davinci-resolve.jpg" alt="Davinci Resolve">
                                 </a>
                             </div>
                             <div class="clients-list__item">
-                                <a href="https://www.kali.org/">
+                                <a href="https://www.kali.org/"  target="_blank">
                                     <img src="images/kali-linux.jpg" alt="Kali Linux">
                                 </a>
                             </div>
                             <div class="clients-list__item">
-                                <a href="https://www.arduino.cc">
+                                <a href="https://www.arduino.cc"  target="_blank">
                                     <img src="images/arduino-logo.jpg" alt="">
                                 </a>
                             </div> 
