--- a/index.html
+++ b/index.html
@@ -409,9 +409,9 @@
                         <div class="grid-list-items__item blog-card">
                             <div class="blog-card__header">
                                 <div class="blog-card__cat-links">
-                                    <a href="https://www.instagram.com/stories/highlights/18033582806069449/">My Edits on Instagram</a>
+                                    <a href="https://www.instagram.com/stories/highlights/18033582806069449/ "  target="_blank">My Edits on Instagram</a>
                                 </div>
-                                <h3 class="blog-card__title"><a href="https://www.instagram.com/stories/highlights/18033582806069449/">Cick here to see my edits 🍿</a></h3>
+                                <h3 class="blog-card__title"><a href="https://www.instagram.com/stories/highlights/18033582806069449/"  target="_blank">Cick here to see my edits 🍿</a></h3>
                             </div>
                             
                         </div> <!-- end blog-card -->
@@ -420,7 +420,7 @@
                                 <div class="blog-card__cat-links">
                                     <a href="blog.html">iOS Development</a>
                                 </div>
-                                <h3 class="blog-card__title"><a href="https://github.com/gavinsamuel/iOS-App-FaceID-Verification">iOS App Biometric <br> [FaceID + TouchID] Unlock <br> on Github </a></h3>
+                                <h3 class="blog-card__title"><a href="https://github.com/gavinsamuel/iOS-App-FaceID-Verification"  target="_blank">iOS App Biometric <br> [FaceID + TouchID] Unlock <br> on Github </a></h3>
                             </div>
                             <div class="blog-card__text">
                                
