--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                              
                             This wepage serves various purposes for me <br>
                             -> showcases my interests <br>
-                            -> hosts my things I do on a daily base <br>
+                            -> hosts the things I do on a daily base <br>
                             -> collection of insights on my interests & life in general.
                             </p>
                         </div> <!-- end s-about__content-main -->
