--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                         <div class="section-header grid-section-split__header">
                             <div class="text-pretitle">MY INTERESTS</div>                           
                             <h2 class="text-display-title">
-                            My key areas of Pursuits.
+                            My key areas of pursuits.
                             </h2>     
                             
                             <p class="lead">
@@ -234,7 +234,7 @@
                                         <p>
                                         I loved computers ever since I can remember, <br>
                                         We had a windows xp in our home when I was in kindergarten <br>
-                                        I mean loving meaning playing games in them duh 😝
+                                        I mean by loving meaning playing games in them duh 😝
 
                                         </p>
                                     </div>
