--- a/about.html
+++ b/about.html
@@ -198,7 +198,7 @@
                         <p class="lead">
                         
                         </p>
-                        <a href="contact.html" class="btn btn--primary">Let's Work Together</a>
+                        <a href="contact.html" class="btn btn--primary">Click here to visit my socials!</a>
                     </div>
 
                 </div>
