--- a/contact.html
+++ b/contact.html
@@ -188,7 +188,7 @@
                                     <div class="contact-block">
                                         <h6>Phone</h6>
                                         <ul class="contact-list">
-                                            <li><a href="tel:197-543-2345">+91 98410 16834</a></li>
+                                            <li><a href="tel:197-543-2345">+91 ***** *****</a></li>
                                             
                                         </ul>
                                     </div>
