--- a/about.html
+++ b/about.html
@@ -66,8 +66,8 @@
                 <nav class="s-header__nav">
     
                     <ul class="s-header__menu-links">
-                        <li class="current"><a href="index.html">Home</a></li>
-                        <li class="current"><a href="projects.html">Projects</a></li>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="projects.html">Projects</a></li>
                         <li class="current"><a href="about.html">About</a></li>
                        
                     </ul> <!-- s-header__menu-links -->
