--- a/contact.html
+++ b/contact.html
@@ -65,10 +65,9 @@
                 <nav class="s-header__nav">
     
                     <ul class="s-header__menu-links">
-                        <li class="current"><a href="index.html">Home</a></li>
-                        <li class="current"><a href="projects.html">Projects</a></li>
-                        <li><a href="about.html">About</a></li>
-                        <li><a href="services.html">           </a></li>
+                        <li> <a href="index.html">Home</a> </li>
+                        <li> <a href="projects.html">Projects</a> </li>
+                        <li> <a href="about.html">About</a> </li>
                         <li class="current"><a href="contact.html">Contact</a></li>
                     </ul> <!-- s-header__menu-links -->
 
