--- a/index.html
+++ b/index.html
@@ -66,10 +66,9 @@
                 <nav class="s-header__nav">
     
                     <ul class="s-header__menu-links">
-                        <li><a href="index.html">Home</a></li>
+                        <li class="current"><a href="index.html">Home</a></li>
                         <li><a href="projects.html">Projects</a></li>
                         <li><a href="about.html">About</a></li>
-                        <li><a href="blog.html">            </a></li>
                     </ul> <!-- s-header__menu-links -->
 
                     <div class="s-header__contact">
