--- a/projects.html
+++ b/projects.html
@@ -65,11 +65,9 @@
                 <nav class="s-header__nav">
     
                     <ul class="s-header__menu-links">
-                        <li class="current"><a href="index.html">Home</a></li>
+                        <li><a href="index.html">Home</a></li>
                         <li class="current"><a href="projects.html">Projects</a></li>
                         <li><a href="about.html">About</a></li>
-                        <li><a href="blog.html">         </a></li>
-                        <li><a href="contact.html">       </a></li>
                     </ul> <!-- s-header__menu-links -->
 
                     <div class="s-header__contact">
