--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
                 <nav class="s-header__nav">
     
                     <ul class="s-header__menu-links">
-                        <li class="current"><a href="index.html">Home</a></li>
-                        <li><a href="projects.html">Projects</a></li>
-                        <li><a href="about.html">About</a></li>
+                        <li class="current"><a href="./">Home</a></li>
+                        <li><a href="./projects">Projects</a></li>
+                        <li><a href="./about">About</a></li>
                     </ul> <!-- s-header__menu-links -->
 
                     <div class="s-header__contact">
